[tool.poetry]
name = "YYdlp-GUI"
version = "0.1.0"
description = "my yt-dlp GUI wrapper"
authors = ["yy-tromb <107352731+yy-tromb@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "YYdlp_GUI"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
flet = "^0.21.2"
yt-dlp = "^2024.5.27"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
ruff = "^0.0.284"
pytest-mock = "^3.11.1"
mypy = "^1.5.1"
pyinstaller = "^6.0.0"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
nox = "^2023.4.22"
inari = {extras = ["mkdocs"], version = "^0.2.1"}

[tool.ruff]
select = ["F","E","W","I","B","PL","RUF","UP"]
unfixable = ["F401", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
