[tool.poetry]
name = "YYdlp-GUI"
version = "0.1.0"
description = "my yt-dlp GUI wrapper"
authors = ["yy-tromb <107352731+yy-tromb@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "YYdlp_GUI"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
flet = "^0.28.3"
yt-dlp = "^2025.9.26"
asyncio = "^3.4.3"
pyinstaller = "^6.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
ruff = "^0.8.1"
pytest-mock = "^3.14.0"
mypy = "^1.13.0"
pyinstaller = "^6.11.1"
pytest-cov = "^6.0.0"
pytest-watch = "^4.2.0"
nox = "^2024.10.9"
inari = {extras = ["mkdocs"], version = "0.2.1"}

[tool.ruff]
select = ["F","E","W","I","B","PL","RUF","UP"]
unfixable = ["F401", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
