[project]
name = "YYdlp-GUI"
version = "0.1.0"
description = "my yt-dlp GUI wrapper"
authors = [{ name = "yy-tromb", email = "107352731+yy-tromb@users.noreply.github.com" }]
requires-python = ">=3.13,<3.15"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "asyncio>=4.0.0",
    "flet>=0.83.1",
    "pyinstaller>=6.11.1",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest~=8.3.3",
    "black>=26.3.1",
    "ruff~=0.8.1",
    "pytest-mock~=3.14.0",
    "mypy~=1.13.0",
    "pyinstaller~=6.11.1",
    "pytest-cov~=6.0.0",
    "pytest-watch~=4.2.0",
    "nox~=2024.10.9",
    "inari[mkdocs]==0.2.1",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["YYdlp_GUI"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
select = ["F","E","W","I","B","PL","RUF","UP"]
unfixable = ["F401", "F841"]
